# SE-Sync

./: .gitignore
C++/: CMakeLists.txt
C++/SE-Sync/include/SESync/: SESync.h  SESyncProblem.h
C++/SE-Sync/src/: SESync.cpp  SESyncProblem.cpp
C++/cmake/: FindCholmod.cmake  SE-Sync-config.cmake.in  SESync-config.cmake.in
C++/examples/: mainviz.cpp
